Make Kestral test more resistant to timeouts and other failures. Add multi-queue Kestral tests. Don't allow a config with 0 hosts in smile. Add more jvm args, increases Kestral test performance slightly.